fix: swagger types
